# paralel_ep

./: CMakeLists.txt  main.cpp  run.bat
